# smart-home

./: .gitignore  README.md  docker-compose.yml
broker/mosquitto/config/: mosquitto.conf
iot/module_1/: module_1.ino
services/auth-svc/: README.md  alembic.ini  pyproject.toml
services/auth-svc/app/: main.py
services/auth-svc/app/api/: users.py
services/auth-svc/app/conf/: config.py
services/auth-svc/app/database/: db.py
services/auth-svc/app/logger/: logger.py
services/auth-svc/app/repository/: accounts.py  models.py  users.py
services/auth-svc/app/schemas/: shared_schemas.py  user_schemas.py
services/auth-svc/app/services/: accounts.py  users.py
services/auth-svc/migration/: env.py
services/auth-svc/migration/versions/: 6f82e8c073ad_create_users_accounts.py
services/auth-svc/tests/repository/: test_integration_accounts.py  test_integration_users.py
services/auth-svc/tests/services/: test_accounts.py  test_users.py
services/service-poc/: build.gradle.kts  example.http  settings.gradle.kts
services/service-poc/src/main/java/ua/ksa/poc/mqtt/: CommandController.java  MqttApplication.java  MqttConfig.java
services/service-poc/src/test/java/ua/ksa/poc/mqtt/: MqttApplicationTests.java
shared/: room-specs.yaml  shared-spec.yaml  tasks-spec.yaml  user-spec.yaml
